--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             height:500px;
             border:1px solid #5b574e;
             border-radius:20px;
-            float:right;
+            float:left;
             position:absolute;
             margin:auto;
             top:0;bottom:0;
