--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -405,12 +405,12 @@
     </div>
     <div class="bag2">
         <div class="mask2">
-            <div class="product">
+            <!--<div class="product">
                 <p class="fctitle font " style="margin-bottom:20px;">hello word</p>
                 <p class="fcontent font" style="margin-bottom:40px;text-align:left;">hello wordhello wordhello wordhello wordhello wordhello wordhello wordhello wordrdhello wordhello wordhello wordrdhello wordhello wordhello wor</p>
                 <input type="button" value="SIGH UP" class="btncheck ficon" />
                 <input type="button" value="SIGH UP" class="btncheck ficon" />
-            </div>
+            </div>-->
             <div class="datum">
                 <div class="content">
                     <p class="font" style="margin-bottom:20px;margin-top:60px;color:#141414;font-size:30px;">资料</p>
